--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "private": true,
-  "displayName": "Plugin Name",
-  "name": "homebridge-plugin-name",
-  "version": "1.0.0",
-  "description": "A short description about what your plugin does.",
-  "license": "Apache-2.0",
+  "displayName": "SamsungTV Control",
+  "name": "homebridge-samsungtv-control",
+  "version": "2.0.0-alpha.1",
+  "description": "Homebridge Samsung TV plugin to control Samsung TV's",
+  "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
+    "url": "https://github.com/mmende/homebridge-samsungtv-control2.git"
   },
   "bugs": {
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
+    "url": "https://github.com/mmende/homebridge-samsungtv-control2/issues"
   },
   "engines": {
     "node": ">=10.17.0",
@@ -21,21 +21,32 @@
     "lint": "eslint src/**.ts",
     "watch": "npm run build && npm link && nodemon",
     "build": "rimraf ./dist && tsc",
-    "prepublishOnly": "npm run lint && npm run build"
+    "prepublishOnly": "npm run lint && npm run build",
+    "scan": "ts-node ./src/manualScan.ts"
   },
   "keywords": [
-    "homebridge-plugin"
+    "homebridge-plugin",
+    "samsung",
+    "tv"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "dlnacasts2": "^0.2.0",
+    "macfromip": "^1.1.1",
+    "node-upnp": "^1.2.0",
+    "node-upnp-remote": "^1.2.0",
+    "samsung-remote": "^1.5.2",
+    "samsung-tv-control": "^1.10.0",
+    "ssdp-ts": "^3.2.6"
+  },
   "devDependencies": {
-    "@types/node": "^14.0.14",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
-    "eslint": "^7.3.1",
+    "@types/node": "^14.0.20",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
+    "eslint": "^7.4.0",
     "homebridge": "^1.1.1",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.6"
   }
 }
