:fire: refactor: cleanup

--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "lint": "eslint src/**.ts",
     "watch": "npm run build && npm link && nodemon",
     "build": "rimraf ./dist && tsc",
-    "prepublishOnly": "npm run lint && npm run build",
-    "scan": "ts-node ./src/manualScan.ts",
-    "cli": "ts-node ./src/cli.ts"
+    "prepublishOnly": "npm run lint && npm run build"
   },
   "keywords": [
     "homebridge-plugin",
