--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lint": "eslint src/**.ts",
     "watch": "npm run build && npm link && nodemon",
     "build": "rimraf ./dist && tsc",
-    "prepublishOnly": "npm run lint && npm run build"
+    "prepublishOnly": "npm run lint && npm run build",
+    "model": "ts-node src/cli.ts"
   },
   "keywords": [
     "homebridge-plugin",
@@ -32,6 +33,7 @@
   "dependencies": {
     "lodash.flatten": "^4.4.0",
     "macfromip": "^1.1.1",
+    "node-persist": "^3.1.0",
     "node-upnp": "^1.2.0",
     "node-upnp-remote": "^1.2.0",
     "samsung-tv-control": "^1.10.0",
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.23",
+    "@types/node-persist": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "eslint": "^7.4.0",
