--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "editor.rulers": [ 140 ],
+  "editor.rulers": [180],
   "eslint.enable": true,
-  "deno.enable": false
+  "deno.enable": false,
+  "eslint.packageManager": "npm"
 }
