:construction: feat: added script as homebridge-samsungtv-control :zap: feat: better error handling in cli

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "typescript": "^3.9.6"
   },
   "bin": {
-    "samsungtv-ctrl": "./cli.js"
+    "samsungtv-ctrl": "./cli.js",
+    "homebridge-samsungtv-control": "./cli.js"
   }
 }
