:truck: removed samsung-ctrl as script name

--- a/package.json
+++ b/package.json
@@ -61,8 +61,5 @@
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6"
   },
-  "bin": {
-    "samsungtv-ctrl": "./cli.js",
-    "homebridge-samsungtv-control": "./cli.js"
-  }
+  "bin": "./cli.js"
 }
