:construction:  feat: addes dist for npx execution

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ Template_README.md
 Compatibility.md
 
 # Ignore compiled code
-dist
+#dist
 
 # ------------- Defaults ------------- #
 
@@ -91,7 +91,7 @@ web_modules/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+#dist
 
 # Gatsby files
 .cache/
